--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,11 +1,11 @@
 body {
   font-size: 120%;
-  font-family: Arial;
+  font-family: 'Roboto', sans-serif;
 }
 
 button, input {
   font-size: 100%;
-  font-family: Arial;
+  font-family: 'Roboto', sans-serif;
 }
 
 table {
@@ -13,13 +13,14 @@ table {
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  /* border: 1px solid #dddddd; */
   text-align: left;
-  padding: 8px;
+  padding: 10px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #6666ff;
+  color: white;
 }
 
 .error {
@@ -33,19 +34,55 @@ tr:nth-child(even) {
 }
 
 .total {
-  font-size: 150%;
-  text-decoration: underline;
+  font-size: 1.2em !important;
+  text-decoration: none !important;
+  margin-bottom: 20px !important;
+}
+
+#total{
+  display: inline-block;
+  margin-top: 10px;
 }
 
 .form {
   margin-top: 25px;
+  margin-bottom: 25px;
   width: 100%;
 }
 
 .transactions {
   text-align: left;
-  max-height: 300px;
+  max-height: 400px;
   overflow: auto;
   width: 90%;
   margin: 0 auto;
+  border-collapse: collapse; 
+  border-radius: 15px;
+  margin-bottom: 20px;
+}
+
+.text-input{
+  display: inline-block;
+  position: relative;
+  margin-top: 15px;
+  padding: 10px 12px;
+  border-radius: 10px;
+  border: 1px #6666ff solid;
+  font-size: 0.8em;
+}
+
+.button-input{
+  display: inline-block;
+  position: relative;
+  margin-top: 15px;
+  padding: 10px 12px;
+  border-radius: 10px;
+  border: 0;
+  font-size: 0.8em;
+  background-color: #6666ff;
+  color: white;
+}
+
+#heading{
+  font-size: 1.3em;
 }
